[WIP] Lots of changes

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -5,3 +5,15 @@
 #  Alberto Baixauli Herr\u00e1ez
 
 window.main.title=Gestor de citas
+modal.saveWait.header=Guardando...
+generic.wait=Espere...
+modal.saveWait.content=Guardando informaci\u00f3n en la base de datos. Este proceso puede durar varios minutos. Por favor, espere...
+generic.error=Error
+modal.saveFail.header=Error al guardar
+modal.saveFail.content=No se ha podido guardar la informaci\u00f3n en la base de datos. Si sale ahora, es posible que se piedan los cambios.
+generic.retry=Reintentar
+generic.cancel=Cancelar
+modal.discard.title=Descartar cambios
+modal.discard.header=\u00bfDescartar todos los cambios?
+modal.discard.content=Est\u00e1 a punto de descartar todos los cambios y revertir al \u00faltimo estado guardado. \u00bfDesea continuar?
+modal.discard.btn.yes=S\u00ed, descartar
