Added remove functionality

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -17,3 +17,16 @@ modal.discard.title=Descartar cambios
 modal.discard.header=\u00bfDescartar todos los cambios?
 modal.discard.content=Est\u00e1 a punto de descartar todos los cambios y revertir al \u00faltimo estado guardado. \u00bfDesea continuar?
 modal.discard.btn.yes=S\u00ed, descartar
+modal.remove.content=\u00bfEst\u00e1 seguro de que quiere eliminar el siguiente elemento?
+generic.appointment=Cita
+generic.patient=Paciente
+modal.removeConflict.content=No se puede eliminar esta persona porque hay una o m\u00e1s citas concertadas con ella. Elimine las citas correspondientes primero.
+modal.removeConflict.title=No se puede eliminar
+generic.doctor=Doctor
+generic.weekday.initial.0=L
+generic.weekday.initial.1=M
+generic.weekday.initial.2=X
+generic.weekday.initial.3=J
+generic.weekday.initial.4=V
+generic.weekday.initial.5=S
+generic.weekday.initial.6=D
