Add "about" modal

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -4,7 +4,7 @@
 #  Daniel Gal\u00e1n Pascual
 #  Alberto Baixauli Herr\u00e1ez
 
-window.main.title=Gestor de citas
+app.title=Gestor de citas
 modal.saveWait.header=Guardando...
 generic.wait=Espere...
 modal.saveWait.content=Guardando informaci\u00f3n en la base de datos. Este proceso puede durar varios minutos. Por favor, espere...
@@ -30,3 +30,5 @@ generic.weekday.initial.3=J
 generic.weekday.initial.4=V
 generic.weekday.initial.5=S
 generic.weekday.initial.6=D
+modal.about.title=Sobre este programa
+modal.about.content=Gestor de citas\n\nEntrega 1 para IPC, 2019.\n\nHecho con \u2764 por:\nDaniel Gal\u00e1n Pascual\nAlberto Baixauli Herr\u00e1ez
