Main view localisation

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -32,3 +32,38 @@ generic.weekday.initial.5=S
 generic.weekday.initial.6=D
 modal.about.title=Sobre este programa
 modal.about.content=Gestor de citas\n\nEntrega 1 para IPC, 2019.\n\nHecho con \u2764 por:\nDaniel Gal\u00e1n Pascual\nAlberto Baixauli Herr\u00e1ez
+modal.setName.title=Establecer nombre
+modal.setName.content=Nombre de la cl\u00ednica: 
+app.default.clinicName=Cl\u00ednica sin nombre
+menu.clinic=_Cl\u00ednica
+menu.clinic.setName=Cambiar _nombre...
+menu.clinic.save=_Guardar
+menu.clinic.discard=_Descartar todos los cambios
+menu.clinic.lang=_Idioma
+menu.clinic.lang.es=_Espa\u00f1ol
+menu.clinic.quit=_Salir
+menu.add=_A\u00f1adir
+menu.add.appointment=Cit_a...
+menu.add.patient=_Paciente...
+menu.add.doctor=_Doctor...
+menu.help=A_yuda
+menu.help.about=Sobre este progr_ama
+tab.appointments=Citas
+tab.patients=Pacientes
+tab.doctors=Doctores
+generic.search=Buscar
+generic.add=A\u00f1adir...
+generic.show=Mostrar
+generic.remove=Eliminar
+tab.appointments.search.prompt=Buscar citas...
+tab.patients.search.prompt=Buscar pacientes...
+tab.doctors.search.prompt=Buscar doctores...
+generic.date=Feha
+generic.time=Hora
+table.person.photo=Fotograf\u00eda
+table.person.id=Identificador
+table.person.name=Nombre
+table.person.phone=Tel\u00e9fono
+table.doctor.visitDays=D\u00edas visita
+table.doctor.visitHours=Horas visita
+table.doctor.room=Sala
