--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -58,7 +58,7 @@ generic.remove=Eliminar
 tab.appointments.search.prompt=Buscar citas...
 tab.patients.search.prompt=Buscar pacientes...
 tab.doctors.search.prompt=Buscar doctores...
-generic.date=Feha
+generic.date=Fecha
 generic.time=Hora
 table.person.photo=Fotograf\u00eda
 table.person.id=Identificador
