Add form validation

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -67,3 +67,12 @@ table.person.phone=Tel\u00e9fono
 table.doctor.visitDays=D\u00edas visita
 table.doctor.visitHours=Horas visita
 table.doctor.room=Sala
+table.person.surname=Apellidos
+generic.change=Cambiar
+generic.save=Guardar
+form.person.title=Datos personales
+generic.ok=Aceptar
+form.person.error.phoneNotOnlyNumbers=El tel\u00e9fono puede contener \u00fanicamente n\u00fameros.
+modal.patientForm.title.add=A\u00f1adir paciente
+modal.patientForm.title.show=Ver paciente
+form.generic.error.empty=El campo no puede estar vac\u00edo.
