--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -76,3 +76,7 @@ form.person.error.phoneNotOnlyNumbers=El tel\u00e9fono puede contener \u00fanica
 modal.patientForm.title.add=A\u00f1adir paciente
 modal.patientForm.title.show=Ver paciente
 form.generic.error.empty=El campo no puede estar vac\u00edo.
+modal.photoSelect.title=Seleccionar foto
+modal.photoSelect.filter.img=Im\u00e1genes
+form.img.error.tooBig=El archivo no puede ser mayor de 
+generic.error.fileNotFound=El archivo no existe.
