--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -75,8 +75,9 @@ generic.ok=Aceptar
 form.person.error.phoneNotOnlyNumbers=El tel\u00e9fono puede contener \u00fanicamente n\u00fameros.
 modal.patientForm.title.add=A\u00f1adir paciente
 modal.patientForm.title.show=Ver paciente
-form.generic.error.empty=El campo no puede estar vac\u00edo.
+form.generic.error.empty=Este campo no puede estar vac\u00edo.
 modal.photoSelect.title=Seleccionar foto
 modal.photoSelect.filter.img=Im\u00e1genes
 form.img.error.tooBig=El archivo no puede ser mayor de 
 generic.error.fileNotFound=El archivo no existe.
+form.person.photoConsent=El paciente consiente al uso de su imagen.
