--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -61,7 +61,7 @@ tab.doctors.search.prompt=Buscar doctores...
 generic.date=Fecha
 generic.time=Hora
 table.person.photo=Fotograf\u00eda
-table.person.id=Identificador
+table.person.id=DNI/NIE
 table.person.name=Nombre
 table.person.phone=Tel\u00e9fono
 table.doctor.visitDays=D\u00edas visita
