Add DNI validation

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -81,3 +81,4 @@ modal.photoSelect.filter.img=Im\u00e1genes
 form.img.error.tooBig=El archivo no puede ser mayor de 
 generic.error.fileNotFound=El archivo no existe.
 form.person.photoConsent=El paciente consiente al uso de su imagen.
+form.person.error.dniPattern=Introduzca un DNI/NIE v\u00e1lido con letra.
