Fix views responsiveness

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -60,12 +60,13 @@ tab.patients.search.prompt=Buscar pacientes...
 tab.doctors.search.prompt=Buscar doctores...
 generic.date=Fecha
 generic.time=Hora
-table.person.photo=Fotograf\u00eda
+table.person.photo=Foto
 table.person.id=DNI/NIE
 table.person.name=Nombre
 table.person.phone=Tel\u00e9fono
-table.doctor.visitDays=D\u00edas visita
-table.doctor.visitHours=Horas visita
+table.doctor.visit=Visita
+table.doctor.visitDays=D\u00edas
+table.doctor.visitHours=Horas
 table.doctor.room=Sala
 table.person.surname=Apellidos
 generic.change=Cambiar
