[WIP] Work on Appointments view

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -90,3 +90,9 @@ form.doctor.title=Ajustes de consultas
 form.doctor.room=Sala
 modal.doctorForm.title.show=Ver doctor
 modal.doctorForm.title.add=A\u00f1adir doctor
+generic.room=Sala
+tab.appointments.summary.inTimeSpan=dentro de
+tab.appointments.summary.days=d
+tab.appointments.summary.mins=m
+tab.appointments.summary.hours=h
+tab.appointments.summary.deadlineExceeded=La fecha ya ha pasado
