Add language change and tranlation to English

--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -40,7 +40,7 @@ menu.clinic.setName=Cambiar _nombre...
 menu.clinic.save=_Guardar
 menu.clinic.discard=_Descartar todos los cambios
 menu.clinic.lang=_Idioma
-menu.clinic.lang.es=_Espa\u00f1ol
+menu.clinic.lang.es=E_spa\u00f1ol
 menu.clinic.quit=_Salir
 menu.add=_A\u00f1adir
 menu.add.appointment=Cit_a...
@@ -64,7 +64,7 @@ table.person.photo=Foto
 table.person.id=DNI/NIE
 table.person.name=Nombre
 table.person.phone=Tel\u00e9fono
-table.doctor.visit=Visita
+table.doctor.visit=Consulta
 table.doctor.visitDays=D\u00edas
 table.doctor.visitHours=Horas
 table.doctor.room=Sala
@@ -96,3 +96,4 @@ tab.appointments.summary.days=d
 tab.appointments.summary.mins=m
 tab.appointments.summary.hours=h
 tab.appointments.summary.deadlineExceeded=La fecha ya ha pasado
+menu.clinic.lang.en=_English
