[WIP] Add base for appointments form

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -97,3 +97,5 @@ tab.appointments.summary.mins=m
 tab.appointments.summary.hours=h
 tab.appointments.summary.deadlineExceeded=This date has already passed
 menu.clinic.lang.en=_English
+modal.appointmentForm.title=Add appointment
+form.appointment.title=Appointment details
