--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -97,3 +97,5 @@ tab.appointments.summary.mins=m
 tab.appointments.summary.hours=h
 tab.appointments.summary.deadlineExceeded=La fecha ya ha pasado
 menu.clinic.lang.en=_English
+modal.appointmentForm.title=A\u00f1adir cita
+form.appointment.title=Ajustes de la cita
