[WIP] Set up week view table in appointment form

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -99,3 +99,6 @@ tab.appointments.summary.deadlineExceeded=This date has already passed
 menu.clinic.lang.en=_English
 modal.appointmentForm.title=Add appointment
 form.appointment.title=Appointment details
+modal.appointmentForm.cell.free=Available
+modal.appointmentForm.cell.unavailable=Not available
+modal.appointmentForm.cell.taken=Taken
