--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -99,3 +99,6 @@ tab.appointments.summary.deadlineExceeded=La fecha ya ha pasado
 menu.clinic.lang.en=_English
 modal.appointmentForm.title=A\u00f1adir cita
 form.appointment.title=Ajustes de la cita
+modal.appointmentForm.cell.free=Disponible
+modal.appointmentForm.cell.unavailable=No disponible
+modal.appointmentForm.cell.taken=Ocupado
