[WIP] Validate appointment form and make it functional

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -102,3 +102,5 @@ form.appointment.title=Appointment details
 modal.appointmentForm.cell.free=Available
 modal.appointmentForm.cell.unavailable=Not available
 modal.appointmentForm.cell.taken=Taken
+form.generic.error.notComplete=Please, fill in all fields.
+form.appointment.error.noSlot=Please, select an available time slot from the table.
