--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -102,3 +102,5 @@ form.appointment.title=Ajustes de la cita
 modal.appointmentForm.cell.free=Disponible
 modal.appointmentForm.cell.unavailable=No disponible
 modal.appointmentForm.cell.taken=Ocupado
+form.generic.error.notComplete=Por favor, rellene todos los campos.
+form.appointment.error.noSlot=Por favor, seleccione una casilla de tiempo v\u00e1lida de la tabla.
