[WIP] Work on appointment form

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -104,3 +104,4 @@ modal.appointmentForm.cell.unavailable=Not available
 modal.appointmentForm.cell.taken=Taken
 form.generic.error.notComplete=Please, fill in all fields.
 form.appointment.error.noSlot=Please, select an available time slot from the table.
+generic.week=Week
