--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -104,3 +104,4 @@ modal.appointmentForm.cell.unavailable=No disponible
 modal.appointmentForm.cell.taken=Ocupado
 form.generic.error.notComplete=Por favor, rellene todos los campos.
 form.appointment.error.noSlot=Por favor, seleccione una casilla de tiempo v\u00e1lida de la tabla.
+generic.week=Semana
