Localisation and minor changes

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -105,3 +105,12 @@ modal.appointmentForm.cell.taken=Taken
 form.generic.error.notComplete=Please, fill in all fields.
 form.appointment.error.noSlot=Please, select an available time slot from the table.
 generic.week=Week
+form.appointment.visitDay=Visit day
+form.appointment.visitTime=Visit time
+generic.week.0=Monday
+generic.week.1=Tuesday
+generic.week.2=Wednesday
+generic.week.3=Thursday
+generic.week.4=Friday
+generic.week.5=Saturday
+generic.week.6=Sunday
