--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -105,3 +105,12 @@ modal.appointmentForm.cell.taken=Ocupado
 form.generic.error.notComplete=Por favor, rellene todos los campos.
 form.appointment.error.noSlot=Por favor, seleccione una casilla de tiempo v\u00e1lida de la tabla.
 generic.week=Semana
+form.appointment.visitDay=D\u00eda de visita
+form.appointment.visitTime=Hora de visita
+generic.week.0=Lunes
+generic.week.1=Martes
+generic.week.2=Mi\u00e9rcoles
+generic.week.3=Jueves
+generic.week.4=Viernes
+generic.week.5=S\u00e1bado
+generic.week.6=Domingo
