Improve doctor form

--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -114,3 +114,4 @@ generic.week.3=Thursday
 generic.week.4=Friday
 generic.week.5=Saturday
 generic.week.6=Sunday
+form.doctor.error.endTimeBefore=End time cannot be earlier than start time.
