--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -114,3 +114,4 @@ generic.week.3=Jueves
 generic.week.4=Viernes
 generic.week.5=S\u00e1bado
 generic.week.6=Domingo
+form.doctor.error.endTimeBefore=La hora de finalizaci\u00f3n no puede ser anterior a la hora de inicio.
