--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -81,7 +81,7 @@ modal.photoSelect.title=Select picture
 modal.photoSelect.filter.img=Images
 form.img.error.tooBig=File cannot be larger than 
 generic.error.fileNotFound=File does not exist.
-form.person.photoConsent=Patient consents to the use of his image.
+form.patient.photoConsent=Patient consents to the use of his image.
 form.person.error.dniPattern=Introduce a valid DNI/NIE with trailing letter.
 form.doctor.visitDays=Visit days
 form.doctor.startTime=Start time
@@ -115,3 +115,4 @@ generic.week.4=Friday
 generic.week.5=Saturday
 generic.week.6=Sunday
 form.doctor.error.endTimeBefore=End time cannot be earlier than start time.
+form.doctor.photoConsent=Doctor consents to the use of his image.
