--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -81,7 +81,7 @@ modal.photoSelect.title=Seleccionar foto
 modal.photoSelect.filter.img=Im\u00e1genes
 form.img.error.tooBig=El archivo no puede ser mayor de 
 generic.error.fileNotFound=El archivo no existe.
-form.person.photoConsent=El paciente consiente al uso de su imagen.
+form.patient.photoConsent=El paciente consiente al uso de su imagen.
 form.person.error.dniPattern=Introduzca un DNI/NIE v\u00e1lido con letra.
 form.doctor.visitDays=D\u00edas consulta
 form.doctor.startTime=Hora de inicio
@@ -115,3 +115,4 @@ generic.week.4=Viernes
 generic.week.5=S\u00e1bado
 generic.week.6=Domingo
 form.doctor.error.endTimeBefore=La hora de finalizaci\u00f3n no puede ser anterior a la hora de inicio.
+form.doctor.photoConsent=El doctor consiente al uso de su imagen.
