--- a/src/gestorcitas/resources/locales/strings_en_US.properties
+++ b/src/gestorcitas/resources/locales/strings_en_US.properties
@@ -116,3 +116,4 @@ generic.week.5=Saturday
 generic.week.6=Sunday
 form.doctor.error.endTimeBefore=End time cannot be earlier than start time.
 form.doctor.photoConsent=Doctor consents to the use of his image.
+form.person.photoConsent=Patient consents to the use of his image.
