--- a/src/gestorcitas/resources/locales/strings_es_ES.properties
+++ b/src/gestorcitas/resources/locales/strings_es_ES.properties
@@ -116,3 +116,4 @@ generic.week.5=S\u00e1bado
 generic.week.6=Domingo
 form.doctor.error.endTimeBefore=La hora de finalizaci\u00f3n no puede ser anterior a la hora de inicio.
 form.doctor.photoConsent=El doctor consiente al uso de su imagen.
+form.person.photoConsent=El paciente consiente al uso de su imagen.
